# EHR-Timeline-Triage

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: app.py  models.py
api/routers/: predict.py
configs/: data.yml  features.yml
docs/: data_pipeline.md  deployment.md  interpretability.md  limitations.md  models.md  system_design.md
ehrtriage/: __init__.py  cohort.py  config.py  features.py  schemas.py  sequence_builder.py  synthetic_data.py
ehrtriage/evaluation/: __init__.py  metrics.py  plots.py
ehrtriage/explain/: __init__.py  attribution.py  text_generator.py
ehrtriage/models/: __init__.py  baselines.py  sequence.py
ehrtriage/scripts/: __init__.py  generate_synthetic.py  train_all.py
notebooks/: exploration.ipynb  sanity_checks.ipynb
tests/: conftest.py  test_api.py  test_cohort.py  test_features.py  test_models.py
web/: Dockerfile  README.md  package-lock.json
web/app/: globals.css  page.tsx
web/components/: RiskView.tsx  TimelineBuilder.tsx  TimelineVisualization.tsx
web/types/: index.ts
