[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ehr-timeline-triage"
version = "0.1.0"
description = "AI-powered EHR timeline analysis for readmission and mortality risk prediction"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "EHR Timeline Triage Contributors"}
]
keywords = ["healthcare", "EHR", "machine-learning", "risk-prediction", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy==1.26.4",
    "pandas==2.3.3",
    "pyarrow==22.0.0",
    "pyyaml==6.0.3",
    "scikit-learn==1.7.2",
    "torch==2.7.1+cu118",
    "torchmetrics==1.8.2",
    "lifelines==0.30.0",
    "fastapi==0.121.1",
    "uvicorn[standard]==0.38.0",
    "pydantic==2.12.4",
    "python-multipart==0.0.20",
    "matplotlib==3.10.7",
    "plotly==6.4.0",
    "seaborn==0.13.2",
    "duckdb==1.4.2",
    "tqdm==4.67.1",
    "python-dateutil==2.9.0.post0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.1",
    "pytest-cov==7.0.0",
    "pytest-asyncio==1.3.0",
    "black==25.11.0",
    "ruff==0.14.4",
    "mypy==1.18.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ehrtriage*", "api*"]
exclude = ["tests*", "docs*", "notebooks*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ehrtriage --cov=api --cov-report=html --cov-report=term"
